# live-bootcamp-project-2

./: README.md  compose.yml  docker.sh
.github/workflows/: prod.yml
auth-service/: Cargo.toml  Dockerfile  recipe.json
auth-service/.sqlx/: query-46289431838e66db582d0cfbf860fbe5f0140e9e5f2c11f971fb703d77f2dfe9.json
auth-service/migrations/: 20241104062313_create_users_table.up.sql
auth-service/src/: app_state.rs  lib.rs  main.rs
auth-service/src/domain/: data_stores.rs  email.rs  email_client.rs  error.rs  mod.rs  password.rs  user.rs
auth-service/src/routes/: login.rs  logout.rs  mod.rs  signup.rs  verify_2fa.rs  verify_token.rs
auth-service/src/services/: hashmap_two_fa_code_store.rs  hashmap_user_store.rs  mock_email_client.rs  mod.rs  postmark_email_client.rs
auth-service/src/services/data_stores/: hashmap_two_fa_code_store.rs  hashmap_user_store.rs  hashset_banned_token_store.rs  mod.rs  postgres_user_store.rs  redis_banned_token_store.rs  redis_two_fa_code_store.rs
auth-service/src/utils/: auth.rs  constants.rs  mod.rs  tracing.rs
auth-service/tests/: api.rs
auth-service/tests/api/: helpers.rs  login.rs  logout.rs  root.rs  routes.rs  signup.rs  verify_2fa.rs  verify_token.rs
