[package]
name = "auth-service"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.7.5", features = ["macros"] }
reqwest = "0.11.26"
tokio = { version = "1.36", features = ["full", "test-util"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.7.0", features = ["v4", "serde"] }
async-trait = "0.1.78"
futures-util = "0.3"
axum-extra = { version = "0.9.2", features = ["cookie"] }
jsonwebtoken = "9.2.0"
chrono = "0.4.35"
dotenvy = "0.15.7"
lazy_static = "1.4.0"
time = { version = "0.3", features = ["std"] }
rand = "0.8.5" 
sqlx = { version = "0.8", features = [ "runtime-tokio-rustls", "postgres", "migrate"] }
argon2 = { version = "0.5.3", features = ["std"] }
redis = { version = "0.25.2", features = ["tokio-comp"] }
test_helpers = { git = "https://github.com/letsgetrusty/test-helpers.git" }
tower-http = { version = "0.5.0", features = ["fs", "cors", "trace"] }
tracing = "0.1.40"
thiserror = "1.0.58"
color-eyre = "0.6.3"
tracing-subscriber = { version = "0.3.18", features = ["registry", "env-filter"] }
tracing-error = "0.2.0"
secrecy = { version = "0.8.0", features = ["serde"] }

[dev-dependencies]
reqwest = { version = "0.11.26", default-features = false, features = ["json", "cookies", "cookie_store"] }
tokio = { version = "1.32.0", features = ["macros", "rt-multi-thread"] }

[[test]]
name = "api"
path = "tests/api/main.rs"